Added Get in touch button

--- a/views/about.jade
+++ b/views/about.jade
@@ -59,6 +59,7 @@ block content
       .row
         .col-md-12
           h2= "Get in Touch"
+          button(type='submit') Get in Touch
           a(href='mailto:team@shareonbazaar.eu') team@shareonbazaar.eu
       .row
         .col-md-12
