Changed faces image size

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -237,9 +237,8 @@ textarea {
   //Image of the team
   .faces{
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 560px;
+    margin: 0 auto;
+    width: 120%;
     border: 5px solid red;
   }
   h2 {
