--- a/views/splash.jade
+++ b/views/splash.jade
@@ -63,7 +63,8 @@ html
               |                 
             p
               | We believe, locals and newcomers should share their skills and learn from each other.
-          video(width="100%" src='https://s3.eu-central-1.amazonaws.com/bazaar-intrst/bazaar_welcome_video.mp4' poster='images/video_poster.jpg' controls)
+          iframe(width='853', height='480', src='https://www.youtube.com/embed/uoVlosNJjZY?rel=0?ecver=1', frameborder='0', allowfullscreen='')
+
       // One
       section#one.wrapper.style1.special
         .inner
