Update photos on splash page

--- a/views/splash.jade
+++ b/views/splash.jade
@@ -123,8 +123,8 @@ html
             img(src='/images/thorben.png')
             p Thorben
           .person
-            img(src='/images/omer.png')
-            p Ömer
+            img(src='/images/khaled.png')
+            p Khaled
           .person
             img(src='/images/rory.png')
             p Rory
